--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -99,6 +99,19 @@
   urlw         = {http://www.worldcat.org/isbn/0486409163},
   }
 
+@book{bak2013,
+  isbn10       = {1475754264},
+  isbn         = {9781475754261},
+  title        = {How Nature Works: the science of self-organized criticality},
+  author       = {Per Bak},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2013},
+  pages        = {212},
+  url          = {http://books.google.com/books?vid=ISBN1475754264},
+  urla         = {http://www.amazon.com/dp/1475754264},
+  urlw         = {http://www.worldcat.org/isbn/1475754264},
+}  
+
 @book{balakrishnan1996,
   title        = {Introductory Discrete Mathematics},
   author       = {V. K. Balakrishnan},
