--- a/common/math/graphics/system/opT_estG_estH_mnoise.tex
+++ b/common/math/graphics/system/opT_estG_estH_mnoise.tex
@@ -3,20 +3,6 @@
 % XeLaTeX file
 % nominal unit = 10mm
 % see pst-node package: https://ctan.org/pkg/pst-node
-%                    _____
-%           A       |     |                 Q
-%   P ---->o------->|  T  |--->------------o
-%          |        |_____|                |
-%          |         _____                 |
-%          |B       |  ^  |                |
-%          o------->|  G  |---> R          |
-%          |        |_____|                |
-%   U --->(+)        _____          V --->(+)
-%          |C       |  ^  |                |
-%          o------->|  H  |---> S          |
-%          |        |_____|                |
-%          v                               v
-%          X                               Y
 %============================================================================
 \begin{pspicture}(-3.2,-3.5)(3.5,0.55)
   %-------------------------------------
@@ -52,25 +38,21 @@
   %-------------------------------------
   % node locations
   %-------------------------------------
-  \pnode(-1.35, 0.000){P}%
-  \pnode(-2.50,-1.875){U}%
-  %
-  \nnode{-1.50}{ 0.000}{A}%
-  \nnode{-1.50}{-1.250}{B}%
-  \nnode{-1.50}{-2.500}{C}%
-  \pnode(-1.50, -3.000){X}%
-  %
-  \pnode( 1.00,-1.250){R}%
-  \pnode( 1.00,-2.500){S}%
-  %
-  \pnode( 1.00, 0.250){Qlabel}%
-  \pnode( 3.00, 0.000){Q}%
-  \pnode( 2.00,-1.875){V}%
-  \pnode( 3.00,-3.000){Y}%
-  %
-  \pnode( 2.00,-1.250){Crq}%
-  \pnode( 2.00,-2.500){Csy}%
-    %     |     |     |_________________ node name
+  \pnode(-2.5,  0.000){P}%
+  \pnode(-2.5, -1.875){U}%
+  \nnode{-1.5}{ 0.000}{A}%
+  \nnode{-1.5}{-1.250}{B}%
+  \nnode{-1.5}{-2.500}{C}%
+  \pnode(-1.5, -3.000){X}%
+  \pnode( 1.0, -1.250){R}%
+  \pnode( 1.0, -2.500){S}%
+  \pnode( 1.0,  0.250){Qlabel}%
+  \pnode( 3.0,  0.000){Q}%
+  \pnode( 2.0, -1.875){V}%
+  \pnode( 3.0, -3.000){Y}%
+  \pnode( 2.0, -1.250){Crq}%
+  \pnode( 2.0, -2.500){Csy}%
+    %     |     |      |________________ node name
     %     |     |_______________________ y location
     %     |_____________________________ x location
   %-------------------------------------
@@ -86,6 +68,20 @@
   \uput[  0](Qlabel){$\rvq(n)$}%
   %-------------------------------------
   % system connections
+  %                    _____
+  %           A       |     |                 Q
+  %   P ---->o------->|  T  |--->------------o
+  %          |        |_____|                |
+  %          |         _____                 |
+  %          |B       |  ^  |                |
+  %          o------->|  G  |---> R          |
+  %          |        |_____|                |
+  %   U --->(+)        _____          V --->(+)
+  %          |C       |  ^  |                |
+  %          o------->|  H  |---> S          |
+  %          |        |_____|                |
+  %          v                               v
+  %          X                               Y
   %-------------------------------------
   \ncline{->}{P}{T}%
   \ncline{->}{B}{G}%
